--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
     height: 2px;
     left: 50%;
     position: absolute;
-    background: #ffd803;
+    background: black;
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
   }
